k8s/service-a.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: job-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
        - name: service-a
          image: nikhilmindfire/service_a:latest
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: job-system
spec:
  selector:
    app: service-a
  ports:
    - port: 5001
      targetPort: 5001
