k8s/service-c.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-c
  namespace: job-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-c
  template:
    metadata:
      labels:
        app: service-c
    spec:
      containers:
        - name: service-c
          image: nikhilmindfire/service-c:latest
          ports:
            - name: http
              containerPort: 5003
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: service-c
  namespace: job-system
spec:
  selector:
    app: service-c
  ports:
    - name: http
      port: 5003
      targetPort: 5003
